css/style.css
@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;500;600&display=swap");

:root {
  --rs-clr: rgb(244, 244, 244);
  --price-clr: rgba(239, 239, 239, 0.723);
  --pkr-clr: rgb(239, 239, 239);
}

* {
  font-family: 'Poppins', sans-serif;
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  outline: none;
  border: none;
  text-decoration: none;
  text-transform: capitalize;
  transition: all .2s linear;
  transition: all .2s linear;
}

html {
  font-size: 57.5%;
  overflow-x: hidden;
  scroll-behavior: smooth;
  scroll-padding-top: 9rem;
}

html::-webkit-scrollbar {
  width: 1rem;
}

html::-webkit-scrollbar-track {
  background: #111;
}

html::-webkit-scrollbar-thumb {
  background: burlywood;
  border-radius: 5rem;
}

body {
  background: linear-gradient(rgba(0, 0, 0, 0.963), rgba(13, 13, 13, 0.73)), rgb(255, 255, 255) no-repeat;
  background-size: cover;
  background-position: center;
  overflow-x: hidden;
}

/* nav start */

nav {
  width: 100%;
  background-color: #1f1f1f;
  padding: 15px 20px;
  height: 70px;
  display: flex;
  align-items: center;
  justify-content: space-between;
  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
  border-bottom: 2px solid burlywood;
}

.logo{
  margin-right: auto;
  margin-top: -1.5rem;
}

nav i {
  font-size: 50px;
  transition: transform 0.3s;
}

.navbar-menu {
  display: flex;
  align-items: center;
}

nav ul {
  list-style: none;
  display: flex;
  gap: 20px;
  margin: 0;
  padding: 0;
}

nav a {
  text-decoration: none;
  color: orange;
  font-weight: bold;
  transition: color 0.3s, text-shadow 0.3s;
  font-size: 2.5rem;
}

nav a:hover {
  color: blanchedalmond;

  text-shadow: 0 0 2px white;
}

nav li {
  transition: transform 0.3s;
  padding-right: 20px;
  margin-right: 10px;
}

.no-hover:hover {
  color: orange !important;
  text-shadow: none !important;

}

.ticker {
  background-color: rgba(0, 0, 0, 0.447);
  color: white;
  font-size: 20px;
  font-family: "Arial", sans-serif;
  white-space: nowrap;
  overflow: hidden;
  bottom: 0;
  width: 100%;
  text-align: center;
  padding: 10px 0;
  box-shadow: 0 -2px 10px rgba(55, 55, 55, 0.5);
}

.ticker span {
  display: inline-block;
  animation: ticker 15s linear infinite;
  padding-left: 100%;
}

@keyframes ticker {
  0% {
    transform: translateX(100%);
  }

  100% {
    transform: translateX(-100%);
  }
}


@media (max-width: 980px) {
  nav ul {
    position: static;
    display: none;
    flex-direction: column;
    position: absolute;
    height: 24rem;
    top: 7.8%;
    border-bottom-left-radius: 1rem;
    border-bottom-right-radius: 1rem;
    left: 0;
    width: 96%;
    background-color: #1f1f1fb1;
    backdrop-filter: blur(20px);
    padding: 10px 0;
    padding-left: 35px;
  }

  nav ul.show {
    display: flex;
  }

  .no-hover {
    display: none;
  }

  .hamburger {
    display: flex;
    flex-direction: column;
    cursor: pointer;
    margin-left: auto;
  }

  .hamburger span {
    height: 3px;
    width: 25px;
    background: orange;
    margin: 4px 0;
    transition: all 0.3s;
  }
}



/* nav end */

section {
  padding: 3rem 9%;
}

.heading {
  text-align: center;
  margin-bottom: 2rem;
}

.heading span {
  color: burlywood;
  font-size: 2rem;
}

.heading h1 {
  font-size: 4rem;
  color: #fff;
}

.bt {
  width: 150px;
}

.btn {
  margin-top: 1rem;
  display: inline-block;
  padding: 1rem 3rem;
  font-size: 1.7rem;
  color: orange;
  border: 0.2rem solid burlywood;
  border-radius: 5rem;
  cursor: pointer;
  background: none;
}

.btn:hover {
  background: rgba(230, 151, 6, 0.809);
  color: #111;
}

.header {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  z-index: 1000;
  background: #222;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-pack: justify;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 1.5rem 9%;
}

.header .navbar a {
  font-size: 1.7rem;
  color: #aaa;
  display: inline-block;
  margin: 0 1rem;
}

.header .navbar a:hover {
  color: rgba(230, 151, 6, 0.809);
}

.header .btn {
  margin-top: 0;
}

.logo {
  font-size: 3.5rem;
  color: #fff;
  font-weight: bolder;
}

.logo i {
  color: orange;
  padding-right: .5rem;
}

#menu-btn {
  font-size: 2.5rem;
  color: #fff;
  cursor: pointer;
  display: none;
}

.home {
  margin: 0 auto;
  /* margin-top: -10rem; */
  width: 100%;
  border: 2px solid rgb(41, 39, 36);
  border-bottom-left-radius: 3rem;
  border-bottom-right-radius: 3rem;
  background: linear-gradient(rgba(17, 17, 17, 0.7), rgba(17, 17, 17, 0.7)), url(https://img.freepik.com/premium-photo/lamp-table-hotel-room-with-window-it_1169327-153803.jpg) no-repeat;
  background-size: cover;
  background-position: center;
  display: flex;
  min-height: 80vh;
  display: flex;
  box-align: center;
  align-items: center;
  box-pack: center;
  justify-content: center;
  padding-bottom: 5rem;
}

.home .content {
  text-align: center;
}

.home .content span {
  margin-top: 8rem;
  font-weight: bolder;
  color: transparent;
  -webkit-text-stroke: 0.1rem #fff;
  font-size: 4vw;
  display: block;
}

.home .content h3 {
  font-size: 6vw;
  color: #fff;
}

.home .content p {
  max-width: 60rem;
  margin: 1rem auto;
  font-size: 1.4rem;
  color: #aaa;
  line-height: 2;
}






/* ABOUT US PAGE */



.about {
  display: flex;
  box-align: center;
  align-items: center;
  flex-wrap: wrap;
  flex-wrap: wrap;
  gap: 2rem;
  margin-top: 5rem;
}

.about .video-container {
  box-flex: 1;
  flex: 1 1 42rem;
  flex: 1 1 42rem;
}

.about .video-container video {
  border-radius: 1rem;
  width: 100%;
}

.about .video-container .controls {
  text-align: center;
  padding: 2rem 0;
}

.about .video-container .controls span {
  display: inline-block;
  height: 2rem;
  width: 2rem;
  border-radius: 50%;
  background: #fff;
  cursor: pointer;
  margin: .7rem;
}

.about .video-container .controls span:hover {
  background: orange;
}
/* ... */

